# Acorn

./: .gitignore
reference/source/: reference.sv
shell/source/: application.sv  application_registers.svh  shell.sv
shell/source/design/: DPRAM.sv  Makefile  application.sv  application_registers.svh  priority_arbiter.sv  round_robin_arbiter.sv  shell.sv
shell/source/driver/: application.ml  driver.ml  generate_registers.ml
shell/source/driver/C/: descriptor_chain.c  descriptors.c  driver.c
shell/source/driver/OCaml/: dune
