(executable
 (public_name application)
 (name application)
 (modules application application_registers driver)
 (libraries core core_unix ctypes ctypes.foreign)
 (foreign_stubs (language c) (names vfio_bridge)))

(rule
 (targets application_registers.ml)
 (deps generate_registers.ml ../design/application_registers.svh)
 (action (run ocaml %{deps} %{targets})))
